# Whope_backend

./: .gitignore  CITATION.cff  README.md  init.fish  init.sh  pyproject.toml  pytest.ini  sonar-project.properties  test_websocket.py
.github/workflows/: tests.yml
whope/: db.sqlite3  manage.py
whope/authentication/: consumers.py  routing.py  tests.py
whope/chat/: consumers.py  routing.py  tasks.py
whope/knowledge_base/: activating.txt  capital_cities.txt  closure.txt  healthy_food.txt  questions.txt
whope/knowledge_base/context_docs/: anger.txt  depression.txt
whope/login/: consumers.py  routing.py
whope/models/: emotions_dense_model.keras  mental_dense_model.keras  topics_dense_model.keras
whope/register/: consumers.py  routing.py
whope/utils/: boot_utils.py  crypto_utils.py  db_utils.py  management.py  model_building.py  nlm.py  nlm_rules.pip  nlp_utils.py  pip_parser.py  prueba.py
whope/whope/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
whope_backend/: manage.py
whope_backend/authentication/: consumers.py  routing.py  tests.py
whope_backend/chat/: consumers.py  routing.py  tasks.py  tests.py
whope_backend/dummy/: apps.py  views.py
whope_backend/hello_world/: consumers.py  routing.py
whope_backend/whope_backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
