[tool.poetry]
name = "whope"
version = "0.1.0"
description = ""
authors = ["Pablo-Caballero-Maria <pabcabmar3@alum.us.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
django = "*"
daphne = "*"
channels = "*"
websocket-client = "*"
huggingface-hub = "*"
python-dotenv = "*"
djangorestframework = "*"
djangorestframework-simplejwt = "*"
passlib = "*"
pytest-django = "*"
pytest-asyncio = "*"
motor = "*"
celery = "*"
aio-pika = "*"


[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"

[tool.black]
line-length = 256

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backnd = "poetry.core.masonry.api"
